fix checkbox alignment

--- a/src/app/shared/components/si/configuration/configuration-advanced-settings/configuration-advanced-settings.component.scss
+++ b/src/app/shared/components/si/configuration/configuration-advanced-settings/configuration-advanced-settings.component.scss
@@ -12,9 +12,9 @@
 }
 
 .field-label {
-    // color: var(--grayscale-label, #5A5D72);
-    // font-family: Aktiv Grotesk;
-    // font-size: 14px;
-    // font-weight: 400;
     @apply tw-text-faded-text-color tw-text-14-px;
+}
+
+:host ::ng-deep .p-multiselect-panel .p-multiselect-items .p-multiselect-item .p-checkbox {
+    @apply tw-mb-0 tw-mt-2-px #{!important};
 }
